# circt

./: .gitignore  .gitmodules  100_PCT_PLAN.md  AGENTS.md  AVIP_LOCAL_FIXES.md  BMC_ITERATION45_APPROACH.md  BMC_MULTISTEP_DESIGN.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DIAGNOSTICS_FEATURE_DEMO.md  FEATURES.md  ITERATION45_README.md  ITERATION45_SUMMARY.md  ITERATION_38_TRACK_D_SUMMARY.md  ITERATION_41_REPORT.md  ITERATION_41_TRACK_C_SUMMARY.md  ITERATION_41_TRACK_D_REPORT.md  ITERATION_45_DPI_IMPORT_SUMMARY.md  ITERATION_45_TRACK_B_SUMMARY.md  ITERATION_45_TRACK_D_SUMMARY.md  PLAN.md  PROJECT_OPENTITAN.md  PROJECT_PLAN.md  PROJECT_SVA.md  PROJECT_UVM_PARITY.md  RANDOMIZATION_USER_GUIDE.md  README.md  UVM_CLASS_METHOD_REPORT.md  UVM_REAL_WORLD_TEST_RESULTS.md  aot_entry_dispatch_engineering_log.md  aot_plan_4.md  aot_plan_5.md  aot_plan_6.md  apb_avip_files.txt  avip-apb-circt-verilog-run.txt  avip_engineering_log.md  circt_sim_engineering_log.md  cocotb-vpi-test-results.md  formal_engineering_log.md  (+16 more)
.codex/: .auto_continue.py.swp  auto_continue.last.json  auto_continue.py  config.toml
blog_data/: blog_post.html  blog_post.md  checkpoints.csv  generate_charts.py
circt-sv-uvm/: .mcp.json  AVIP_CONSTRAINT_TEST_REPORT.md  README.md  avip_ahb_constraints.sv  avip_apb_constraints.sv  avip_axi4_constraints.sv
docs/: ASSERTION_FAILURE_ANALYSIS.md  AVIP_JIT_PLAN.md  BLOCK_LEVEL_JIT_DESIGN.md  BMC_LEC_CLEANUP_REFACTOR_PLAN.md  CHANGES.md  CIRCT_SIM_FULL_NATIVE_JIT_PLAN.md  CIRCT_SIM_INTERPRETER_CHURN_MAP.md  CRITICAL_HIGH_FIX_TODO.md  DPI_ANALYSIS.md  FormalRegression.md  FormalResultsSchema.md  FormalRunnerContract.md  FormalVerification.md  ImportVerilog-Limitations.md  LEC_ENGINEERING_LOG.md  MooreSMTSolverPlan.md  MutationRunnerContract.md  PROJECT_GAPS_ENGINEERING_LOG.md  PROJECT_GAPS_MANUAL_WRITEUP.md  PROJECT_GAPS_SCOPED_EXECUTION_BOARD.md  PROJECT_GAPS_SCOPED_FIX_PLAN.md  PROJECT_GAPS_TODO_AUDIT.md  UVMParityPlan.md  (+18 more)
lib/Conversion/SMTToZ3LLVM/: CMakeLists.txt  LowerSMTToZ3LLVM.cpp
lib/Dialect/Coverage/: CMakeLists.txt  CoverageDialect.cpp  CoverageOps.cpp
lib/Dialect/Coverage/Transforms/: CMakeLists.txt  ExportCoverageData.cpp  InstrumentCoverage.cpp
lib/Runtime/: CMakeLists.txt  MooreRuntime.cpp
lib/Runtime/uvm/: uvm_macros.svh  uvm_pkg.sv
lib/Tools/: CMakeLists.txt
lib/Tools/circt-bmc/: CMakeLists.txt  ExternalizeRegisters.cpp  LowerToBMC.cpp  PruneBMCRegisters.cpp  StripLLHDProcesses.cpp  StripUnreachableSymbols.cpp
lib/Tools/circt-debug/: CMakeLists.txt  DAPServer.cpp  Debug.cpp  DebugSession.cpp  VCDWriter.cpp
lib/Tools/circt-lec/: CMakeLists.txt  ConstructLEC.cpp  ConstructSeqLEC.cpp  DumpLECUnknowns.cpp  LowerLECLLVM.cpp  LowerLLHDRefPorts.cpp  StripLLHDInterfaceSignals.cpp
lib/Tools/circt-verilog-lsp-server/: LSPServer.cpp
lib/Tools/circt-verilog-lsp-server/Utils/: PendingChanges.cpp
lib/Tools/circt-verilog-lsp-server/VerilogServerImpl/: CMakeLists.txt  LSPDiagnosticClient.cpp  SemanticTokens.cpp  SemanticTokens.h  VerilogDocument.cpp  VerilogDocument.h  VerilogIndex.cpp  VerilogIndex.h  VerilogServer.cpp  VerilogServer.h  VerilogTextFile.cpp  VerilogTextFile.h  Workspace.cpp  Workspace.h
tools/arcilator/: BehavioralLowering.cpp  BehavioralLowering.h  CMakeLists.txt  arcilator.cpp
tools/circt-bmc/: CMakeLists.txt  circt-bmc.cpp
tools/circt-mut/: CMakeLists.txt  NativeMutationPlanner.cpp  NativeMutationPlanner.h  circt-mut.cpp
tools/circt-sim/: AOTProcessCompiler.cpp  AOTProcessCompiler.h  CMakeLists.txt  CompiledModuleLoader.cpp  CompiledModuleLoader.h  ExecutionEngineHandle.h  JITBlockCompiler.cpp  JITBlockCompiler.h  JITCompileManager.cpp  JITCompileManager.h  JITSchedulerRuntime.cpp  JITSchedulerRuntime.h  LLHDProcessInterpreter.cpp  LLHDProcessInterpreter.h  LLHDProcessInterpreterBytecode.cpp  LLHDProcessInterpreterBytecode.h  LLHDProcessInterpreterCallIndirect.cpp  LLHDProcessInterpreterDrive.cpp  LLHDProcessInterpreterGlobals.cpp  LLHDProcessInterpreterMemory.cpp  LLHDProcessInterpreterModuleLevelInit.cpp  LLHDProcessInterpreterNativeThunkExec.cpp  LLHDProcessInterpreterNativeThunkPolicy.cpp  LLHDProcessInterpreterStorePatterns.h  LLHDProcessInterpreterTrace.cpp  LLHDProcessInterpreterUvm.cpp  LLHDProcessInterpreterWaitCondition.cpp  UVMFastPaths.cpp  UcontextProcess.cpp  UcontextProcess.h  circt-sim-vpi-wasm.js  circt-sim.cpp
tools/circt-sim-compile/: CMakeLists.txt  LowerTaggedIndirectCalls.cpp  LowerTaggedIndirectCalls.h  circt-sim-compile.cpp
tools/circt-tblgen/: CMakeLists.txt  FIRRTLAnnotationsGen.cpp  circt-tblgen.cpp
tools/circt-verilog/: CMakeLists.txt  circt-verilog.cpp
unittests/Dialect/Sim/: CMakeLists.txt  DPIRuntimeTest.cpp  DesignPartitionerTest.cpp  EventQueueTest.cpp  ForkJoinTest.cpp  IncrementalCompilerTest.cpp  MemoryOptimizationTest.cpp  ParallelSchedulerTest.cpp  PerformanceProfilerTest.cpp  ProcessSchedulerTest.cpp  SimulationControlTest.cpp  SyncPrimitivesTest.cpp  TLMPortsTest.cpp  UVMFactoryTest.cpp  UVMPhaseManagerTest.cpp  VPIRuntimeTest.cpp  WaveformDumperTest.cpp
unittests/Support/: BoolConditionTest.cpp  CMakeLists.txt  CommutativeValueEquivalenceTest.cpp  CoverageDatabaseTest.cpp  CoverageReportGeneratorTest.cpp  DiagnosticsTest.cpp  FourStateUtilsTest.cpp  I1ValueSimplifierTest.cpp  ProjectConfigTest.cpp  ResourceGuardTest.cpp  SMTDeadCodeEliminationTest.cpp  SMTModelTest.cpp  TestReportingTest.cpp  TwoStateUtilsTest.cpp  WallClockTimeoutTest.cpp
unittests/Tools/: CMakeLists.txt
unittests/Tools/circt-debug/: CMakeLists.txt  DebugTest.cpp
unittests/Tools/circt-lec/: CMakeLists.txt  LowerLECLLVMTest.cpp  StripLLHDSignalPtrCastTest.cpp  XOptimisticLECTest.cpp
unittests/Tools/circt-sim/: CMakeLists.txt  LLHDProcessInterpreterTest.cpp
unittests/Tools/circt-sim-compile/: CMakeLists.txt  LowerTaggedIndirectCallsTest.cpp
unittests/Tools/circt-verilog-lsp-server/: CMakeLists.txt
unittests/Tools/circt-verilog-lsp-server/Utils/: PendingChangesTest.cpp
unittests/Tools/circt-verilog-lsp-server/VerilogServerImpl/: CMakeLists.txt  SemanticTokensTest.cpp  SlangPositionConversionTest.cpp
(+5669 files in other folders)
