add_circt_unittest(CIRCTSupportTests
  BoolConditionTest.cpp
  CommutativeValueEquivalenceTest.cpp
  CoverageDatabaseTest.cpp
  CoverageReportGeneratorTest.cpp
  DiagnosticsTest.cpp
  FVIntTest.cpp
  JSONTest.cpp
  NPNClassTest.cpp
  PrettyPrinterTest.cpp
  ProjectConfigTest.cpp
  TestReportingTest.cpp
  WallClockTimeoutTest.cpp
)

target_link_libraries(CIRCTSupportTests
  PRIVATE
  CIRCTComb
  CIRCTHW
  CIRCTSupport
  MLIRIR
)
