add_circt_unittest(CIRCTSupportTests
  BoolConditionTest.cpp
  CommutativeValueEquivalenceTest.cpp
  CoverageDatabaseTest.cpp
  CoverageReportGeneratorTest.cpp
  DiagnosticsTest.cpp
  FourStateUtilsTest.cpp
  FVIntTest.cpp
  I1ValueSimplifierTest.cpp
  JSONTest.cpp
  PrettyPrinterTest.cpp
  ProjectConfigTest.cpp
  ResourceGuardTest.cpp
  SMTModelTest.cpp
  SMTDeadCodeEliminationTest.cpp
  TestReportingTest.cpp
  TruthTableTest.cpp
  TwoStateUtilsTest.cpp
  WallClockTimeoutTest.cpp
)

target_link_libraries(CIRCTSupportTests
  PRIVATE
  CIRCTComb
  CIRCTHW
  CIRCTSeq
  CIRCTSupport
  MLIRArithDialect
  MLIRIR
  MLIRParser
  MLIRSCFDialect
  MLIRSMT
)
