add_circt_unittest(CIRCTLECToolTests
  LowerLECLLVMTest.cpp
  StripLLHDSignalPtrCastTest.cpp
  XOptimisticLECTest.cpp
)

target_link_libraries(CIRCTLECToolTests
  PRIVATE
  CIRCTLECTransforms
  CIRCTVerifToSMT
  CIRCTHW
  MLIRIR
  MLIRParser
  MLIRPass
  MLIRControlFlowDialect
  MLIRLLVMDialect
  MLIRSCFDialect
  MLIRSMT
  MLIRSupport
)
