set(CIRCT_SIM_TEST_LIBS
  CIRCTArc
  CIRCTArcToLLVM
  CIRCTArcTransforms
  CIRCTCombToArith
  CIRCTConvertToArcs
  CIRCTEmit
  CIRCTHW
  CIRCTHWTransforms
  CIRCTLLHD
  CIRCTMoore
  CIRCTOM
  CIRCTSeq
  CIRCTSeqTransforms
  CIRCTSim
  CIRCTSimTransforms
  CIRCTSV
  CIRCTSupport
  CIRCTTransforms
  CIRCTVerif
  MLIRArithDialect
  MLIRControlFlowDialect
  MLIRDLTIDialect
  MLIRFuncDialect
  MLIRFuncInlinerExtension
  MLIRIndexDialect
  MLIRLLVMDialect
  MLIRLLVMIRTransforms
  MLIRMathDialect
  MLIRParser
  MLIRSCFDialect
  MLIRTransforms
)

add_circt_unittest(CIRCTSimToolTests
  LLHDProcessInterpreterTest.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/LLHDProcessInterpreter.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/JITCompileManager.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/LLHDProcessInterpreterGlobals.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/LLHDProcessInterpreterModuleLevelInit.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/LLHDProcessInterpreterNativeThunkExec.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/LLHDProcessInterpreterNativeThunkPolicy.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/LLHDProcessInterpreterWaitCondition.cpp
  ${CIRCT_SOURCE_DIR}/tools/circt-sim/UVMFastPaths.cpp
)

target_include_directories(CIRCTSimToolTests
  PRIVATE
  ${CIRCT_SOURCE_DIR}/tools/circt-sim
)

target_link_libraries(CIRCTSimToolTests
  PRIVATE
  ${CIRCT_SIM_TEST_LIBS}
  MooreRuntime
)
